kubernetes/wordpress-service.yaml
# kubernetes/wordpress-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: NodePort
